--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,8 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.1.1",
     "@vinejs/vine": "^2.1.0",
+    "cron": "^3.1.7",
+    "ethers": "^6.13.2",
     "luxon": "^3.5.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
