feat: Done function clawr Data to blockchian and cron job

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "@adonisjs/tsconfig/tsconfig.app.json",
   "compilerOptions": {
     "rootDir": "./",
-    "outDir": "./build"
+    "outDir": "./build",
+    // "module": "commonjs",
+    // "target": "es6",
+    // "resolveJsonModule": true,
+    // "esModuleInterop": true
   }
 }
