--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -2,7 +2,8 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.8"
+    "ethers": "^6.13.2",
+    "hardhat": "^2.22.10"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
