--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "dotenv": "^16.4.5",
     "ethers": "^5.4.7",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
