done: docker file

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -4,7 +4,7 @@ HOST=0.0.0.0
 LOG_LEVEL=info
 APP_KEY=GCRhh8yxDqFJvRg-qOLpJ6AuIJ0MvPQm
 NODE_ENV=development
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=061200
