update: update chain IMX

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -9,3 +9,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=061200
 DB_DATABASE=web3
+
+#chain list
+
+CHAIN_BNC_TESTNET="https://bsc-testnet-rpc.publicnode.com"
+CHAIN_TMX_TESTNET="https://rpc.testnet.immutable.com"
