--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,11 +21,10 @@ server {
 
     location /api/ {
         proxy_pass http://backend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_page 500 502 503 504 /50x.html;
@@ -33,4 +32,9 @@ server {
     location = /50x.html {
         root /usr/share/nginx/html;
     }
+    
+    # Thêm các header bảo mật (tùy chọn)
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
 }
